--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -125,6 +125,30 @@ li:hover {
 	text-align: center;
 	margin-bottom: 1em;
 }
+
+.filters {
+	display: flex;
+	justify-content: center;
+	padding: 20px 0px 50px 0px;
+	gap: 10px;
+}
+
+.filter {
+	padding: 10px 15px;
+	border: 1px solid #1D6154;
+	border-radius: 60px;
+	color: #1D6154;
+	background-color: white;
+	font-size: 16px;
+	font-family: 'Syne';
+}
+
+.filter-selected, .filter:hover {
+	color: white;
+	background-color: #1D6154;
+	cursor: pointer;
+}
+
 .gallery {
 	width: 100%;
 	display: grid;
