--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -301,7 +301,7 @@ footer nav ul {
 	color: #3D3D3D;
 }
 
-.error {
+.login-error {
 	padding-top: 20px;
     color: red;
     display: none;
@@ -394,29 +394,19 @@ footer nav ul {
 	height: 100px;
 }
 
-.modal-gallery-edit:hover .modal_arrow-icon {
-	visibility: visible;
-}
-
-.modal-gallery-edit {
+.modal-gallery-image {
 	display: flex;
 	flex-direction: column;
 	gap: 5px;
 	position: relative;
 }
 
-.modal-gallery-edit i {
+.modal-trash {
 	color: white;
-	position: absolute;
 	font-size: 0.9em;
 	padding: 4px;
 	background-color: black;
 	border-radius: 2px;
-	top: 10px;
-	right: 10px;
-}
-
-.modal-trash-icon {
 	position: absolute;
 	right: 5px;
 	top: 5px;
@@ -424,10 +414,21 @@ footer nav ul {
 }
 
 .modal-arrow {
+	color: white;
+	font-size: 0.9em;
+	padding: 4px;
+	background-color: black;
+	border-radius: 2px;
+	top: 10px;
+	right: 10px;
 	position: absolute;
 	top: 5px;
-	right: 26px;
+	right: 25px;
 	visibility: hidden;
+}
+
+.modal-gallery-image:hover .modal-arrow {
+	visibility: visible;
 }
 
 .modal-line {
@@ -517,7 +518,6 @@ form {
 	display: flex;
 	flex-direction: column;
 	gap: 15px;
-	padding-bottom: 15px;
 }
 
 input[type="text"],
@@ -539,11 +539,13 @@ select {
 	border: none;
 	border-radius: 20px;
 	color: white;
-	background-color: #A7A7A7;
+	background-color: #1D6154;
 	font-size: 1.2em;
+	cursor: pointer;
 }
 
 .message-error {
+	margin-bottom: 15px;
 	color: #D65353;
 	display: none;
 }
